# basketball-reference-webscrapper

./: .gitignore  NBA_API_COLUMN_MAPPING.md  NBA_API_SCRAPER_DOCUMENTATION.md  README.md  README_NBA_API.md  debug_okc_overtime.py  example_nba_api_usage.py  pyproject.toml
.github/workflows/: workflow.yaml
basketball_reference_webscrapper/: WebScrapNbaSalary.py  __init__.py  nba_api_player_gamelogs.py  params.yaml  web_scrap_basketball_reference.py  web_scrap_nba_api.py  web_scrap_player_boxscore_nba_api.py  webscrapping_basketball_reference.py
basketball_reference_webscrapper/constants/: team_season_validity.yaml
basketball_reference_webscrapper/data_models/: feature_model.py
basketball_reference_webscrapper/utils/: team_utils.py
tests/: test_team_utils.py  test_web_scrap_basketball_reference.py  test_web_scrap_nba_api.py  test_web_scrap_player_boxscore_nba_api.py  test_webscrapping_basketball_reference.py
